Fix header on mobile.

--- a/sass/imports/_main.scss
+++ b/sass/imports/_main.scss
@@ -204,7 +204,7 @@ nav {
   a {
     flex-grow: 1;
     text-align: center;
-    margin-left: 2em;
+    margin-left: 1em;
   }
   .icon {
     max-width: 2.5em;
