--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -276,7 +276,7 @@ body.start::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #0C1222 url('/img/jsconf-pattern.svg?1489608333') 0 0 repeat;
+  background: #0C1222 url('/img/jsconf-pattern.svg?1476504782') 0 0 repeat;
   z-index: -1;
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
@@ -545,7 +545,7 @@ nav a {
       -ms-flex-positive: 1;
           flex-grow: 1;
   text-align: center;
-  margin-left: 2em;
+  margin-left: 1em;
 }
 /* line 209, ../sass/imports/_main.scss */
 nav .icon {
@@ -1075,15 +1075,15 @@ address {
 @media (min-width: 768px) {
   /* line 89, ../sass/imports/_backgrounds.scss */
   .bg-blue-pat-header.nav-fixed {
-    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 75%, #051add 75%, #051add 100%), -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6) 100%), url('/img/jsconf-pattern.svg?1489608333');
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 75%, #051add 75%, #051add 100%), linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6) 100%), url('/img/jsconf-pattern.svg?1489608333');
+    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 75%, #051add 75%, #051add 100%), -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6) 100%), url('/img/jsconf-pattern.svg?1476504782');
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 75%, #051add 75%, #051add 100%), linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6) 100%), url('/img/jsconf-pattern.svg?1476504782');
   }
 }
 @media (min-width: 1280px) {
   /* line 89, ../sass/imports/_backgrounds.scss */
   .bg-blue-pat-header.nav-fixed {
-    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) calc((.75 * 1280px) + ((100% - 1280px)/2)), #051add calc((.75 * 1280px) + ((100% - 1280px)/2)), #051add 100%), -webkit-linear-gradient(top, rgba(12, 18, 34, 0.75), rgba(12, 18, 34, 0.8) 100%), url('/img/jsconf-pattern.svg?1489608333');
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) calc((.75 * 1280px) + ((100% - 1280px)/2)), #051add calc((.75 * 1280px) + ((100% - 1280px)/2)), #051add 100%), linear-gradient(to bottom, rgba(12, 18, 34, 0.75), rgba(12, 18, 34, 0.8) 100%), url('/img/jsconf-pattern.svg?1489608333');
+    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) calc((.75 * 1280px) + ((100% - 1280px)/2)), #051add calc((.75 * 1280px) + ((100% - 1280px)/2)), #051add 100%), -webkit-linear-gradient(top, rgba(12, 18, 34, 0.75), rgba(12, 18, 34, 0.8) 100%), url('/img/jsconf-pattern.svg?1476504782');
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) calc((.75 * 1280px) + ((100% - 1280px)/2)), #051add calc((.75 * 1280px) + ((100% - 1280px)/2)), #051add 100%), linear-gradient(to bottom, rgba(12, 18, 34, 0.75), rgba(12, 18, 34, 0.8) 100%), url('/img/jsconf-pattern.svg?1476504782');
   }
 }
 
